@@ -2,6 +2,9 @@
 - Added analysis metadata to the file output.
 - Change: Restructured the configuration options. The sorting does now
   make more sense than before.
+- Change: Removed the whole dual-output mess.
+- Change: When the destination is set to 'file' via config file, this
+  value can not be overwritten with local cookie settings.
 - Bugfix: No helptext displayed for readonly cookie config.
 - Bugfix: The Hans skin renders the config option name twice.
 - Bugfix: When setting the logfiles to '10', kreXX will now keep 10
